rgw: clean up RGWShardedOmapCRManager on early return

ShardedOmapCRManager is spawning coroutines that sleep. if we don't
finish them before trying to drain_all(), they'll lead to deadlock

Fixes: http://tracker.ceph.com/issues/17571

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 2c66e9b7fad4eec017cecc6bd6005522cc0fb264)